Small wording fix

--- a/content/en/testimonials.yaml
+++ b/content/en/testimonials.yaml
@@ -3,7 +3,7 @@ meta:
   description: Find out what other businesses and individuals are saying about their HubRise experience.
 content:
   title: Why You Will Love Working with HubRise
-  description: Don't just take our word for it, here's what developers and clients are saying about us.
+  description: Don't just take our word for it, here's what our partners and clients are saying about us.
   testimonials:
     - quote: As a Sage ERP Consultant with more than 13 years of experience implementing and customising Sage X3 and Sage Intacct solutions, I am passionate about software integration and development. HubRise bridges a significant gap in hospitality solutions, by offering an intuitive API that empowers developers to construct robust integrations. This enables the integration of various systems like ERP, CRM, and E-Commerce with EPOS software. HubRise's integration support team and partner team have been extremely helpful with my enquiries and I could not thank them enough for this experience.
       person_details:
