--- a/content/en/apps.yaml
+++ b/content/en/apps.yaml
@@ -381,11 +381,17 @@ content:
           title: RestaJet
           description: RestaJet offers a mobile app for reservations and an online ordering website for restaurants. Content management, reporting and marketing tools are available on the RestaJet console.
           additional_info:
+        - website: https://www.restaur-app.fr
+          documentation: /apps/restaur-app
+          logo: restaur-app.png
+          title: Restaur'App
+          description: Restaur'App is tailored for fast food and takeaway. It offers restaurateurs their own branded website and mobile app to showcase their establishment and manage online orders, as well as deliveries, without any commission on sales.
+          additional_info: Integration in progress.
         - website: https://restaurant-internet.com
           documentation: /apps/restaurant-internet
           logo: restaurant-internet.png
           title: Restaurant-internet
-          description: Restaurant-internet offers websites with table reservation and online ordering modules. It addresses the particular needs of delivery and takeaway businesses.
+          description: Restaurant-internet offers websites with table reservation and online ordering modules. It addresses the particular needs of delivery and takeaway businesses.
         - website: https://www.shopify.com/
           documentation: /apps/shopify
           logo: shopify.png
