--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,18 +1,16 @@
 name: eslint
-
 on: push
 
 jobs:
-  test:
+  eslint:
     runs-on: ubuntu-latest
-    name: Run eslint
 
     steps:
       - name: Clone repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js and package cache
-        uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 18.16.0
           cache: 'yarn'
