--- a/content/en/apps.yaml
+++ b/content/en/apps.yaml
@@ -341,7 +341,7 @@ content:
           documentation: /apps/kurvekiosks
           logo: kurvekiosks.png
           title: Kurve Kiosks
-          description: Kurve Kiosks designs and develops dynamic self odering kiosks technology for hospitality operators interested in adopting self-service solutions. Their technology facilitates this transition by providing a customisable, feature rich, and reliable platform.
+          description: Kurve Kiosks designs and develops self ordering kiosks tailored for hospitality operators. The platform is customisable, rich in features, and reliable, easing the transition to self-service technology.
           additional_info:
         - website: https://latoquemagique.com/
           documentation: /apps/la-toque-magique
