--- a/content/fr/apps.yaml
+++ b/content/fr/apps.yaml
@@ -499,7 +499,7 @@ content:
           documentation: /fr/apps/trapar
           logo: trapar.png
           title: Trapar
-          description: Trapar facilite la livraison du dernier kilomètre avec suivi en temps réel et l'option d'utiliser ses propres livreurs ou faire appel à ceux de Trapar.
+          description: Trapar facilite la livraison du dernier kilomètre avec suivi en temps réel et l'option d'utiliser ses propres livreurs ou de faire appel à ceux de Trapar.
           additional_info:
     - title: Fidélité et marketing
       slug: loyalty-and-marketing
