--- a/content/fr/apps.yaml
+++ b/content/fr/apps.yaml
@@ -391,8 +391,8 @@ content:
           documentation: /fr/apps/restaur-app
           logo: restaur-app.png
           title: Restaur'App
-          description: Restaur'App propose une solution dédiée à la restauration rapide et à la vente à emporter. Elle permet aux restaurateurs de disposer de leur propre site web et application mobile pour présenter leur établissement et gérer les commandes en ligne, ainsi que les livraisons, sans commission sur les ventes.
-          additional_info: Intégration en cours.
+          description: Restaur'App permet aux restaurateurs de disposer de leur propre site web et application mobile pour présenter leur établissement et gérer les commandes en ligne, ainsi que les livraisons, sans commission sur les ventes. Restaur'App est une solution dédiée à la restauration rapide et à la vente à emporter.
+          additional_info:
         - website: https://restaurant-internet.com
           documentation: /fr/apps/restaurant-internet
           logo: restaurant-internet.png
